syntax = "proto3";
package msgpacket;

option go_package = "./;msgpacket";

enum PB_MSG_TYPE
{
    // msg que inter
    _PB_MSG_INTER_NULL = 0;
    _PB_MSG_INTER_QUECENTER_REGISTER      = 1;
    _PB_MSG_INTER_QUECENTER_REGISTER_RES  = 2;
    _PB_MSG_INTER_QUECENTER_OFFLINE_NTF   = 3;
    _PB_MSG_INTER_QUECENTER_ONLINE_NTF    = 4;
    _PB_MSG_INTER_QUESRV_CONNECT          = 5;
    _PB_MSG_INTER_QUESRV_CONNECT_RES      = 6;
    _PB_MSG_INTER_QUECENTER_HEARTBEAT     = 7;
    _PB_MSG_INTER_QUECENTER_HEARTBEAT_RES = 8;
    _PB_MSG_INTER_QUESRV_HEARTBEAT        = 9;
    _PB_MSG_INTER_QUESRV_HEARTBEAT_RES    = 10;

    _PB_MSG_INTER_CLISRV_REG_MSGQUE_CENTER     = 11;
    _PB_MSG_INTER_CLISRV_REG_MSGQUE_CENTER_RES = 12;
    _PB_MSG_INTER_CLISRV_HEARTBEAT     = 13;
    _PB_MSG_INTER_CLISRV_HEARTBEAT_RES = 14;
    _PB_MSG_INTER_CLISRV_REG_TO_QUE    = 15;
    _PB_MSG_INTER_CLISRV_REG_TO_QUE_RES      = 16;
    _PB_MSG_INTER_QUESRV_REPORT_BROADCAST = 17;
    _PB_MSG_INTER_QUESRV_NTF = 18;

    _PB_MSG_INTER_MSG     = 30;
    _PB_MSG_INTER_MSG_RES = 31;
    _PB_MSG_INTER_QUESRV_GET_SRVTYPE     = 32;
    _PB_MSG_INTER_QUESRV_GET_SRVTYPE_RES = 33;

    _PB_MSG_INTER_MAX = 1000;

    // server msg
    _PB_MSG_CENTERSRV_GAMESRV_GETINFO = 1001;
    _PB_MSG_CENTERSRV_GAMESRV_GETINFO_RES = 1002;

    _PB_MSG_LOGONSRV_CENTERSRV_LOGON = 1003;
    _PB_MSG_LOGONSRV_CENTERSRV_LOGON_RES = 1004;

    _PB_MSG_DBSERVER_READ = 1005;
    _PB_MSG_DBSERVER_READ_RES = 1006;

    // client msg
    _PB_MSG_LOGON = 2001;
    _PB_MSG_LOGON_RES = 2002;
}

enum PB_RESPONSE_CODE
{
    PB_RESPONSE_CODE_Fail = 0;
    PB_RESPONSE_CODE_OK = 1;
    PB_RESPONSE_CODE_Rpc_not_accept = 2;
    PB_RESPONSE_CODE_redirect = 3;
    PB_RESPONSE_CODE_no_que_srv = 4;
    PB_RESPONSE_CODE_no_srv_uuid = 5;
}
