syntax = "proto3";
package msgpacket;

option go_package = "./;msgpacket";

import "msgdef.proto";

message PB_MSG_INTER_QUESRV_REGISTER
{
    int64 que_srv_id = 1;
    string ip = 2;
    int32 port = 3;
}

message PB_MSG_INTER_QUESRV_INFO
{
    int64 que_srv_id = 1;
    string ip = 2;
    int32 port = 3;
}
message PB_MSG_INTER_QUESRV_REGISTER_RES
{
    repeated PB_MSG_INTER_QUESRV_INFO que_srv_info = 1;
    int64 que_srv_id = 2;
}

message PB_MSG_INTER_QUESRV_OFFLINE_NTF
{
    int64 que_srv_id = 1;
}

message PB_MSG_INTER_QUESRV_ONLINE_NTF
{
    PB_MSG_INTER_QUESRV_INFO que_srv_info = 1;
}

message PB_MSG_INTER_QUESRV_CONNECT
{
    int64 que_srv_id = 1;
}
message PB_MSG_INTER_QUESRV_CONNECT_RES
{
    int64 que_srv_id = 1;
}

message PB_MSG_INTER_QUECENTER_HEARTBEAT
{
    int64 que_srv_id = 1;
}
message PB_MSG_INTER_QUECENTER_HEARTBEAT_RES
{
    int64 que_srv_id = 1;
}


message PB_MSG_INTER_QUESRV_HEARTBEAT
{
    int64 que_srv_id = 1;
}
message PB_MSG_INTER_QUESRV_HEARTBEAT_RES
{
    int64 que_srv_id = 1;
}

message PB_MSG_INTER_SRV_REG
{
    int32 srv_type = 1;
    int64 srv_uuid = 2;
}
message PB_MSG_INTER_SRV_REG_RES
{
    PB_RESPONSE_CODE res = 1;
    int64 srv_uuid = 2;
    int64 que_srv_id = 3;
    string que_srv_ip = 4;
    int32 que_srv_port = 5;
}

message PB_MSG_INTER_SRV_HEARTBEAT
{
    int64 srv_uuid = 1;
}
message PB_MSG_INTER_SRV_HEARTBEAT_RES
{
    int64 srv_uuid = 1;
}

message PB_MSG_INTER_SRV_MSG
{
    int64 srv_uuid = 1;
    bytes msg_bin = 2;
}

message PB_MSG_INTER_SRV_REG_TO_QUE
{
    int64 srv_uuid = 1;
    int32 srv_type = 2;
}
message PB_MSG_INTER_SRV_REG_TO_QUE_RES
{
    int64 srv_uuid = 1;
    int32 srv_type = 2;
}
